@@ -1,21 +1,18 @@
-import java.util.Vector;
-
 /**
- * Implementacion de la interfaz Stack en forma de vector
+ * Stack que utiliza como memoria una lista simplemente unida.
  * @author Eric Mendoza 15002
  * @author Jonnathan Juarez 15377
  * @since 14/08/2016
  * @version 2.0
  */
-
-public class StackVector<E> extends AbstractStack<E> {
-    protected Vector<E> data;
+public class StackSinglyLinkedList<E> extends AbstractStack<E> {
+    protected SinglyLinkedList<E> data;
 
     /**
      * Constructor, construye un stack vacio
      */
-    public StackVector() {
-        data = new Vector<E>();
+    public StackSinglyLinkedList() {
+        data = new SinglyLinkedList<E>();
     }
 
     /**
@@ -24,7 +21,7 @@ public class StackVector<E> extends AbstractStack<E> {
      */
     @Override
     public void push(E item) {
-        data.add(item);
+        data.addFirst(item);
     }
 
     /**
@@ -32,7 +29,7 @@ public class StackVector<E> extends AbstractStack<E> {
      * @return retorna el ultimo elemento agregado
      */
     public E pop() {
-        return data.remove(size()-1);
+        return data.removeFirst();
     }
 
     /**
@@ -40,7 +37,7 @@ public class StackVector<E> extends AbstractStack<E> {
      * @return retorna el ultimo elemento agregado
      */
     public E peek() {
-        return data.get(size() - 1);
+        return data.getFirst();
     }
 
     /**
@@ -50,5 +47,4 @@ public class StackVector<E> extends AbstractStack<E> {
     public int size() {
         return data.size();
     }
-
 }
